--- a/Progress.html
+++ b/Progress.html
@@ -75,7 +75,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-image: url('C:\Users\vladi\OneDrive\Desktop\Project\Site\New files\Pictures\miro_preview.jpg');
+            background-image: url('miro_preview.jpg');
             background-size: cover;
             background-position: center;
             border-radius: 15px;
