--- a/1.html
+++ b/1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Life Is Strange Fan Reboot</title>
-    <link rel="icon" href="C:\Users\vladi\OneDrive\Desktop\Project\Site\New files\Pictures\logocopy.ico" type="image/x-icon">
+    <link rel="icon" href="logocopy.ico" type="image/x-icon">
     <style>
         @font-face {
             font-family: 'Helvetica';
@@ -185,14 +185,14 @@
 </head>
 <body>
     <div class="overlay">
-        <img src="C:\Users\vladi\OneDrive\Desktop\Project\Site\New files\Pictures\lisfr_logo.png" alt="Loading Image">
+        <img src="lisfr_logo.png" alt="Loading Image">
     </div>
     <video class="video-background" autoplay muted loop>
-        <source src="C:\Users\vladi\OneDrive\Desktop\Project\Site\New files\Videos\trailer_lis_filter.mp4" type="video/mp4">
+        <source src="trailer_lis_filter.mp4" type="video/mp4">
     </video>
     <header class="header">
         <div class="nav-container">
-            <img src="C:\Users\vladi\OneDrive\Desktop\Project\Site\New files\Pictures\logocopy.png" alt="Icon" class="nav-icon"> <!-- Добавлена иконка -->
+            <img src="logocopy.png" alt="Icon" class="nav-icon"> <!-- Добавлена иконка -->
             <div class="nav-buttons">
                 <a href="#" class="active">Home</a>
                 <a href="#">Progress</a>
