--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Life Is Strange Fan Reboot</title>
-    <link rel="icon" href="photos/logo.ico" type="image/x-icon">
+    <link rel="icon" href="photos/ogo.ico" type="image/x-icon">
     <style>
         @font-face {
             font-family: 'Helvetica';
