--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 </head>
 <body>
     <div class="overlay">
-        <img src="lisfr_logo.png" alt="Loading Image">
+        <img src="photos/lisfr_logo.png" alt="Loading Image">
     </div>
     <video class="video-background" autoplay muted loop>
         <source src="trailer_lis_filter.mp4" type="video/mp4">
