--- a/index.html
+++ b/index.html
@@ -196,9 +196,11 @@
             <div class="nav-buttons">
                 <a href="#" class="active">Home</a>
                 <a href="#">Progress</a>
+                <a href="#">Ideas</a>
                 <a href="#">Donate</a>
-                <a href="#">Contact</a>
                 <a href="#">Members</a>
+                <a href="#">Contacts</a>
+                <a href="#">FAQ</a>
             </div>
         </div>
     </header>
