--- a/index.html
+++ b/index.html
@@ -3,240 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Life Is Strange Fan Reboot</title>
-    <link rel="icon" href="photos/logo.ico" type="image/x-icon">
+    <title>I love u, Ines</title>
     <style>
-        @font-face {
-            font-family: 'Helvetica';
-            src: url('Fonts/Helvetica.ttf') format('truetype');
-        }
-
         body {
             margin: 0;
-            font-family: 'Helvetica', sans-serif;
-            background-color: transparent; /* Сделаем фон прозрачным */
-            color: #fff;
-            overflow: hidden; /* Убираем скролл */
-            transition: opacity 1s ease-out;
-        }
-
-        .overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #000;
-            z-index: 9999;
-            opacity: 1;
-            transition: opacity 1s ease-out;
-        }
-
-        .overlay img {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            max-width: 75%;
-            max-height: 75%;
-            opacity: 0;
-            animation: fadeInOut 2s ease-out forwards;
-        }
-
-        @keyframes fadeInOut {
-            0% {
-                opacity: 0;
-            }
-            50% {
-                opacity: 1;
-            }
-            100% {
-                opacity: 0;
-            }
-        }
-
-        .header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
-            color: #fff;
-            padding: 10px 10px;
+            padding: 0;
             display: flex;
             align-items: center;
-            z-index: 1000;
-        }
-
-        .nav-container {
-            display: flex;
-            align-items: center;
-            width: 100%;
-        }
-
-        .nav-icon {
-            width: 65px; /* Ширина иконки */
-            height: 65px; /* Высота иконки */
-            margin-right: 20px; /* Отступ справа от иконки */
-        }
-
-        .nav-buttons {
-            display: flex;
-            gap: 20px; /* Расстояние между кнопками */
-        }
-
-        .nav-buttons a {
-            color: #fff;
-            text-decoration: none;
-            font-size: 18px;
-            font-weight: bold;
-            transition: color 0.3s;
-            padding: 10px 20px; /* Добавляем padding для обводки */
-        }
-
-        .nav-buttons a:hover {
-            color: #e60012; /* Цвет при наведении */
-        }
-
-        .nav-buttons a.active {
-            border: 2px solid #fff; /* Белая обводка */
-            border-radius: 5px; /* Закругленные углы */
-            color: #fff; /* Белый текст */
-            background-color: transparent; /* Прозрачный фон */
-            transition: border-color 0.3s, color 0.3s;
-        }
-
-        .logo {
-            height: 50px; /* Устанавливаем высоту логотипа */
-        }
-
-        .logo-container {
-            position: relative;
-            display: flex;
             justify-content: center;
-            flex: 1;
+            background-color: white;
+            font-family: Arial, sans-serif;
+            overflow: hidden;
+            height: 100vh;
         }
-
-        .video-background {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            z-index: -1; /* Помещаем видео за контент */
-        }
-
-        .message {
-            position: fixed;
-            bottom: 50%;
-            left: 50%;
-            transform: translate(-50%, 50%);
-            color: #fff;
-            font-size: 24px;
-            font-weight: bold;
-            opacity: 1;
-            transition: opacity 1s ease-in;
-        }
-
-        .button-container {
-            position: fixed;
-            bottom: 40%;
-            left: 50%;
-            transform: translate(-50%, 50%);
-            opacity: 1;
-            transition: opacity 1s ease-in;
-        }
-
-        .button-container button {
-            background-color: transparent; /* Прозрачный фон */
-            color: #fff; /* Белый текст */
-            border: 2px solid #fff; /* Белые рамки */
-            padding: 10px 20px;
-            font-size: 18px;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: border-color 0.3s, color 0.3s;
-        }
-
-        .button-container button:hover {
-            border-color: #e60012; /* Цвет рамки при наведении */
-            color: #e60012; /* Цвет текста при наведении */
-        }
-
-        .fade-to-black {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #000;
-            opacity: 0;
-            pointer-events: none;
-            transition: opacity 1s ease;
-            z-index: 10000; /* Выше всего остального контента */
-        }
-
-        main {
-            padding-top: 70px; /* Отступ, чтобы контент не перекрывал фиксированное меню */
-            color: #fff; /* Цвет текста для лучшей видимости на фоне видео */
+        h1 {
+            margin: 0;
+            font-size: calc(2rem + 5vw);
+            text-align: center;
+            color: black;
         }
     </style>
 </head>
 <body>
-    <div class="overlay">
-        <img src="photos/lisfr_logo.png" alt="Loading Image">
-    </div>
-    <video class="video-background" autoplay muted loop>
-        <source src="trailer_lis_filter.mp4" type="video/mp4">
-    </video>
-    <header class="header">
-        <div class="nav-container">
-            <img src="logocopy.png" alt="Icon" class="nav-icon"> <!-- Добавлена иконка -->
-            <div class="nav-buttons">
-                <a href="#" class="active">Home</a>
-                <a href="#">Progress</a>
-                <a href="#">Ideas</a>
-                <a href="#">Donate</a>
-                <a href="#">Members</a>
-                <a href="#">Contacts</a>
-                <a href="#">FAQ</a>
-            </div>
-        </div>
-    </header>
-    <!-- Основное содержание сайта -->
-    <main>
-    </main>
-    <div class="message">Welcome to the Life Is Strange Fan Reboot!</div>
-    <div class="button-container">
-        <button id="getStartedButton">Get Started</button>
-    </div>
-    <div class="fade-to-black"></div>
-    <script>
-        window.onload = function() {
-            setTimeout(function() {
-                document.querySelector('.overlay').style.opacity = '0';
-                document.body.style.opacity = '1';
-
-                // Скрыть заставку после анимации
-                setTimeout(function() {
-                    document.querySelector('.overlay').style.display = 'none';
-                }, 1000); // Убедитесь, что overlay полностью исчез
-            }, 2000); // Задержка в 2 секунды
-        };
-
-        document.getElementById('getStartedButton').addEventListener('click', function() {
-            const fadeToBlack = document.querySelector('.fade-to-black');
-
-            // Запуск плавного затемнения экрана
-            fadeToBlack.style.pointerEvents = 'all'; // Включаем pointer-events
-            fadeToBlack.style.opacity = '1';
-
-            // Переход на следующую страницу через 1 секунду после начала затемнения
-            setTimeout(function() {
-                window.location.href = 'Progress.html'; // Замените на нужный URL
-            }, 1000);
-        });
-    </script>
+    <h1>I love u, Ines</h1>
 </body>
 </html>
